TestCases/ASTTests/SemanticErrorsTests/tests/test3.c
int main() {

int x = 478;
int b = -251454;

int** x_ptr = &x;
x_ptr = &b;
return 0;
}
